--- a/MasterStyle.css
+++ b/MasterStyle.css
@@ -35,10 +35,20 @@
   cursor : -webkit-grab;
 }
 
+.menuLabel {
+  font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
+  font-size: 50px;
+  color: white;
+}
 /*Clickable Div*/
 
 div.clickable { /* Containing div must have a position value */
     position:relative;
+    background-image: url(burger.jpg);
+    width: 80%;
+    height: 20%;
+    opacity: 0.95;
+
 }
 div.clickable a {
     position:absolute;
