--- a/MasterStyle.css
+++ b/MasterStyle.css
@@ -1,3 +1,4 @@
+/*Main background of all pages START*/
  html {
   background: url(bg2.png) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -5,7 +6,7 @@
   -o-background-size: cover;
   background-size: cover;
 }
-
+/*Main background of all pages START*/
 .normal {
   font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
   font-size: 22px;
@@ -40,7 +41,44 @@
   font-size: 50px;
   color: red;
 }
-/*Clickable Div*/
+/*Slide and show START */
+#stay-in-place {
+    height: 100%;
+    width: 100%;
+    background: url(food.jpg) no-repeat center center fixed;
+     webkit-background-size: 80%;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+    position: absolute;
+}
+#move-in-to-place {
+    position: absolute;
+    bottom: -100%;
+    height : 100%;
+    width : 100%;
+    background: red;
+    opacity:0;
+    height:0;
+}
+.box {
+    position: relative;
+    width:100%;
+    height:25%;
+    overflow:hidden;
+
+}
+.box:hover #move-in-to-place {
+    bottom: 0;
+    -webkit-transition: all 1s, -webkit-transform 1s;
+    transition: all 1s, transform 1s;
+    width:100%;
+    height:100%;
+    opacity:1;
+}
+/*Slide and show END*/
+
+/*Clickable Div START*/
 
 div.clickable { /* Containing div must have a position value */
     position:relative;
@@ -65,3 +103,4 @@ div.clickable a {
     opacity: 0; /*workaround to make clickable in IE */
     filter: alpha(opacity=1); /*workaround to make clickable in IE */
 }
+/*Clickable Div End*/
