--- a/MasterStyle.css
+++ b/MasterStyle.css
@@ -1,6 +1,6 @@
 /*Main background of all pages START*/
  html {
-  background: url(bg2.png) no-repeat center center fixed;
+  background: url(abstractBackground1.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -51,7 +51,7 @@
 
 .subMenuLabel {
   font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   color: black;
 }
 
@@ -59,7 +59,7 @@
 #stay-in-place {
     height: 100%;
     width: 100%;
-    background: url(food.jpg) no-repeat center center fixed;
+    background: url(lunchBackground.jpg) no-repeat center center fixed;
      webkit-background-size: 80%;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -76,16 +76,7 @@
      background-size: cover;
     position: absolute;
 }
-#stay-in-place-GpaCalc {
-    height: 100%;
-    width: 100%;
-    background: url(chalkboard.jpg) no-repeat center center fixed;
-     webkit-background-size: 80%;
-     -moz-background-size: cover;
-     -o-background-size: cover;
-     background-size: cover;
-    position: absolute;
-}
+
 #move-in-to-place {
     position: absolute;
     bottom: -100%;
@@ -97,8 +88,8 @@
 }
 .box:hover #move-in-to-place {
     bottom: 0;
-    -webkit-transition: all 0.5s, -webkit-transform 0.5s;
-    transition: all 1s, transform 0.5s;
+    -webkit-transition: all 0.25s, -webkit-transform 0.25s;
+    transition: all 1s, transform 0.25s;
     width:100%;
     height:100%;
     opacity:1;
@@ -109,38 +100,35 @@
     width:100%;
     height:25%;
     overflow:hidden;
-
 }
 
 
 /*Slide and show END*/
 
-/*Clickable Div START*/
-
-div.clickable { /* Containing div must have a position value */
-  position:relative;
-  width: 50%;
-  height: 25%;
-  background: url(chalkboard.jpg) no-repeat center center fixed;
-}
-
-div.clickable a {
-  position:absolute;
-  width:100%;
-  height:100%;
-  top:0;
-  left:0;
+/*Option Boxe START*/
+.option1 {
+  float: left;
+  background: url(blueAbstract.png);
+  min-width: 50%;
+  min-height: 30%;
   font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
-  font-size: 40px;
+  font-size: 28px;
   font-weight: bold;
   color: black;
-  text-decoration:none; /* Makes sure the link   doesn't get underlined */
-  z-index:10; /* raises anchor tag above everything else in div */
-  background-color:white; /*workaround to make clickable in IE */
-  opacity: 0; /*workaround to make clickable in IE */
-  filter: alpha(opacity=1); /*workaround to make clickable in IE */
 }
-/*Clickable Div End*/
+.option2 {
+  float: right;
+  background: url(yellowAbstract.png);
+  min-width: 50%;
+  min-height: 30%;
+  font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  color: black;
+}
+
+
+
 
 /* unvisited link */
 a:link {
