--- a/MasterStyle.css
+++ b/MasterStyle.css
@@ -59,7 +59,7 @@
 #stay-in-place {
     height: 100%;
     width: 100%;
-    background: url(lunchBackground.jpg) no-repeat center center fixed;
+    background: url(greenishpoly.png) no-repeat center center fixed;
      webkit-background-size: 80%;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -69,7 +69,7 @@
 #stay-in-place-Schedule {
     height: 100%;
     width: 100%;
-    background: url(schedule.jpg) no-repeat center center fixed;
+    background: url(bluepoly.png) no-repeat center center fixed;
      webkit-background-size: 80%;
      -moz-background-size: cover;
      -o-background-size: cover;
