--- a/MasterStyle.css
+++ b/MasterStyle.css
@@ -35,14 +35,14 @@
   color: white;
 }
 #showParentsDiv {
-  background-color: black;
+  background-color: white;
   opacity: 0.85;
   padding: 2px;
 }
 #showParentsNews {
   font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
-  font-size: 12px;
-  color: white;
+  font-size: 16px;
+  color: black;
   opacity: 0.85;
 }
 
