--- a/MasterStyle.css
+++ b/MasterStyle.css
@@ -63,7 +63,7 @@
 #stay-in-place {
     height: 100%;
     width: 100%;
-    background: url(greenishpoly.png) no-repeat center center fixed;
+    background: url(greenishpoly.jpg) no-repeat center center fixed;
      webkit-background-size: 80%;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -73,7 +73,7 @@
 #stay-in-place-Schedule {
     height: 100%;
     width: 100%;
-    background: url(bluepoly.png) no-repeat center center fixed;
+    background: url(bluepoly.jpg) no-repeat center center fixed;
      webkit-background-size: 80%;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -114,7 +114,7 @@
   float: left;
   background: url(blueAbstract.png);
   min-width: 50%;
-  min-height: 30%;
+  min-height: 20%;
   font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
   font-size: 28px;
   font-weight: bold;
@@ -122,9 +122,9 @@
 }
 .option2 {
   float: right;
-  background: url(yellowAbstract.png);
+  background: url(yellowAbstract.jpg);
   min-width: 50%;
-  min-height: 30%;
+  min-height: 20%;
   font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
   font-size: 28px;
   font-weight: bold;
